style.css
p{
    margin: 0;
}

/** Home*/

.landing-img{
    height: 45vw;
    max-height: 700px;
    min-height: 300px;
    object-fit: cover;
    object-position: 0 20%;
}

.landing-img-title{
    position: absolute;
    left: 3%;
    top: 25vw;
    width: 30%;
    color: white;
}

.landing-img-title-name{
    font-size: 35px;
    font-weight: bold;
    margin: 0;
}

.landing-img-title-info{
    font-size: 20px;
}

.bio-title{
    margin-top: 2rem;
    margin-bottom: 0.5rem;
    text-align: center;
    font-size: 35px;
}

.bio-text{
    padding-bottom: 3rem;
    text-align: center;
    font-size: 18px;
    width: 75%;
    max-width: 1000px;
    margin: auto;
}

.video-container{
    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, .1), inset 0 0.125em 0.5em rgba(0, 0, 0, .15);
}

.video{
    padding: 3%;
    padding-bottom: 0;
    text-align: center;
}

#youtube-video{
    padding-top: 1%;
    width: 70vw;
    height: 42vw;
}

.explore-button-container{
    text-align: center;
    height: 120px;
}

.explore-button{
    all: unset;
    position: relative;
    top: 36%;
    border-radius: 7px;
    font-size: 18px;
    padding: 10px 20px;
    background-color: rgb(11,110,253);
    color: white; 
    transition: background-color 0.2s;
}
.explore-button:hover{
    background-color: rgb(11, 98, 220);
    color: white; 
}

#explore-button-arrow{
    font-size: 18px;
    padding-left: 15px;
    color: white;
}

.footer-container{
    display: grid;
    grid-template-areas: 
    "copyright social";
}

.copyright{
    padding: 20px;
}

.socials{
    justify-self: right;
    display: grid;
    grid-template-areas:
    "social social social";
    gap: 10px;
    padding: 20px;
}

.footer-text{
    color: black;
    font-size: 14px;
    margin: 0;
    transition: color .2s;
}

.footer-text-link{
    color: black;
    font-size: 14px;
    margin: 0;
    transition: color .2s;
}

.footer-text-link:link {
    text-decoration: none;
}

.footer-text-link:visited {
    text-decoration: none;
}

.footer-text-link:hover {
    color: gray;
}

/** Projects*/

.project-cards-container{
    background-color: rgba(11, 98, 220, 0.05);
    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, .1), inset 0 0.125em 0.5em rgba(0, 0, 0, .15);
}

.project-title{
    text-align: center;
    padding: 20px 20px 0px 20px;
    font-size: 40px;
}

.feature-project-cards-sub-container{
    margin: auto;
    width: 95%;
    display: grid;
    grid-template-columns: repeat(3, minmax(auto, 1fr));
    justify-items: center;
}

@media only screen and (max-width: 800px){
    .feature-project-cards-sub-container{
        margin: auto;
        width: 95%;
        display: grid;
        grid-template-columns: repeat(1, minmax(auto, 1fr));
        justify-items: center;
    }
}

.card{
    margin: 8%;
    width: 90%;
    height: 400px;
    text-align: center;
    box-shadow:  0 0.5em 1.5em rgba(0, 0, 0, .1),  0 0.125em 0.5em rgba(0, 0, 0, .15);
    transition: width 0.2s;
}

.card:hover{
    width: 92%;
}

.card-title{
    padding: 15px 10px;
    font-size: 18px;
    margin: 0;
}

.card-img{
    margin-left: auto;
    margin-right: auto;
    width: 90%;
    height: 35%;
    object-fit: cover;
    border: 1px solid rgba(0, 0, 0, 0.175);
    box-shadow:  0 0.5em 1.5em rgba(0, 0, 0, .01),  0 0.125em 0.5em rgba(0, 0, 0, .055);
}

.card-info{
    padding: 15px;
    font-size: 15px;
    color: grey;
    height: 50%;
    overflow: hidden;
    width: 90%;
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
}

.explore-button-card-container{
    text-align: center;
    position: absolute;
    width: 100%;
    bottom: 25px;
}

.project-cards-sub-container{
    margin: auto;
    width: 95%;
    display: grid;
    grid-template-columns: repeat(3, minmax(auto, 1fr));
    justify-items: center;
}

@media only screen and (max-width: 800px){
    .project-cards-sub-container{
        margin: auto;
        width: 95%;
        display: grid;
        grid-template-columns: repeat(1, minmax(auto, 1fr));
        justify-items: center;
    }
}

.list-container-title{
    padding-top: 22px;
    text-align: center;
    font-size: 25px;
}

